--- a/Views/Reparacion/Index.cshtml
+++ b/Views/Reparacion/Index.cshtml
@@ -151,7 +151,9 @@ else
         <form class="row g-3 mb-3">
           <div class="col-md-2">
             <label for="input-codigo-producto" class="form-label">Código producto</label>
-            <input type="text" class="form-control" id="input-codigo-producto">
+
+           <input type="text" class="form-control" id="input-codigo-producto" tabindex="1">
+
           </div>
           <div class="col-md-3">
             <label for="input-nombre-producto" class="form-label">Nombre producto</label>
@@ -192,11 +194,53 @@ else
         </table>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">onclick="cerrarBusqueda()Cerrar</button>
       </div>
     </div>
   </div>
 </div>
+
+
+<!-- Modal búsqueda -->
+
+<div class="modal fade" id="busquedaModal" tabindex="-1" role="dialog" aria-labelledby="busquedaModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="busquedaModalLabel">Buscar productos</h5>
+                <button type="button" class="close" data-dismiss="modal" onclick="cerrarBusqueda()" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="busqueda">Buscar</label>
+                    <input type="text" class="form-control" id="busqueda" placeholder="Ingrese el nombre del producto">
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Código</th>
+                                <th>Nombre</th>
+                                <th>Descripción</th>
+                                <th>Precio</th>
+                                <th>Existencia</th>
+                            </tr>
+                        </thead>
+                        <tbody id="resultados"></tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="modal-footer">
+               <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="cerrarBusqueda()">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -488,8 +532,6 @@ $(document).ready(function() {
       data: { codigo: codigoProducto },
       dataType: 'json',
       success: function(data) {
-      
-     
         $('#input-precio').val(data.precio);
         $('#input-nombre-producto').val(data.nombre);
         $('#input-unidades').val(1);
@@ -522,5 +564,63 @@ $('#input-unidades').on('blur', function() {
     $(this).val('1');
   }
 });
+
+
+
+$(document).ready(function() {
+    $('#input-codigo-producto').on('keydown', function(e) {
+        if (e.keyCode == 9 && $(this).val() == '') {
+            e.preventDefault();
+            $('#busquedaModal').modal('show');
+        }
+    });
+});
+
+
+function cerrarBusqueda() {
+  $('#busquedaModal').modal('hide');
+}
+
+
+
+$(document).ready(function () {
+    $('#busquedaModal').on('show.bs.modal', function () {
+        buscarProductos();
+    });
+})
+function buscarProductos() {
+    var busqueda = $('#busqueda').val();
+    console.log("buscando productos con la cadena: " + busqueda);
+    $.ajax({
+        type: "GET",
+        url: "product/consultaProducto",
+        data: {busqueda: busqueda},
+        dataType: 'json',
+        success: function (productos) {
+            console.log("obteniendo productos...");
+   console.log(productos);
+            $('#resultados').empty();
+            if (productos.status) {
+                $.each(productos.data, function (i, producto) {
+                 console.log(producto.codigoproducto);
+                    var row = '<tr>' +
+                    '<td>' + producto.codigoProducto + '</td>' +
+                    '<td>' + producto.nombre + '</td>' +
+                    '<td>' + producto.descripcion + '</td>' +
+                    '<td>' + producto.precio + '</td>' +
+                    '<td>' + producto.existencia + '</td>' +   
+                    '</tr>';
+                    $('#resultados').append(row);
+                });
+                console.log("productos cargados correctamente.");
+            } else {
+                console.log("error al cargar productos: " + productos.message);
+            }
+        },
+        error: function () {
+            console.log("error al cargar productos.");
+        }
+    });
+}
 
 </script>
