--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Sucursal" asp-action="index">Sucursales</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Ventas" asp-action="index">Ventas</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Ventas" asp-action="index">Historial de Ventas</a>
                             </li>
                             
                         </ul>
