--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Ventas" asp-action="index">Historial de Ventas</a>
                             </li>
+                                 <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Entrada" asp-action="index">Entradas</a>
+                            </li>
+                            
                             
                         </ul>
                         <ul class="navbar-nav">
